# clinician-copilot

./: .gitignore  Makefile  README.md  test_api.py
backend/: .env.example  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: audit.py  auth.py  health.py  notes.py  patients.py  sessions.py
backend/app/core/: config.py  logging.py  metrics.py  rate_limiter.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  ai.py  audit.py  auth.py  notes.py  patient.py  session.py
backend/app/services/: __init__.py  audit.py  guardrails.py  llm_client.py  notes.py
backend/eval/: __init__.py  dataset.json  eval_runner.py
backend/scripts/: generate_key.py  seed_admin.py
backend/tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_encryption.py  test_guardrails.py  test_health.py  test_notes.py  test_rbac.py  test_sessions.py
frontend/: Makefile  index.html  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: AuditLogs.tsx  Login.tsx  PatientDetail.tsx  Patients.tsx  SessionDetail.tsx
frontend/src/store/: authStore.ts
frontend/src/tests/: App.test.tsx  authStore.test.ts
frontend/src/types/: index.ts
